--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html lang="en">
+    <html lang="en"> <!-- the html tag doesnt need to be inented, bbecayse the DOCTYPE isn't a container -->
         <head>
             <title>StarWars</title>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
                 <section class="planets">
                     <h2 class="title-planets">PLANETS</h2>
                     <select id="planet"></select>
-                        <div class="planets-diameter"></div>
+                        <div class="planets-diameter"></div><!-- indented too much -->
                         <div class="planets-terrain"></div>
                         <div class="planets-climate"></div>
                         <div class="planets-population"></div>
